--- a/FortyDocs/lib/templates/base.html
+++ b/FortyDocs/lib/templates/base.html
@@ -17,7 +17,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <title>{% block subtitle %}{% endblock %}::Fortran Documentation</title>
+    <title>{% block subtitle %}{% endblock %}::{{ documentation_title }}</title>
   </head>
   <body>
   	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
