--- a/FortyDocs/lib/templates/module.html
+++ b/FortyDocs/lib/templates/module.html
@@ -24,6 +24,11 @@ Unknown File</small></h1>
 </div>
 <div class="row">
   <div class="col-md-6">
+    {% include "_interfaces.html" %}
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-6">
     {% include "_subroutines.html" %}
   </div>
   <div class="col-md-6">
