Partially fixed class methods being included in module routines Used full trees in class index

--- a/FortyDocs/lib/templates/assets/css/styles.css
+++ b/FortyDocs/lib/templates/assets/css/styles.css
@@ -21,6 +21,7 @@ div.orgChart div.node.original{
 }
 ul.arguments {
 	background-color: #eaeaea;
+	padding: 8px 4px;
 }
 ul.subroutines blockquote, ul.functions blockquote {
 	font-size: 11px;
