--- a/FortyDocs/lib/templates/base.html
+++ b/FortyDocs/lib/templates/base.html
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
           </button>
           {# each sub-template must provide home_index, class_index #}
-          <a class="navbar-brand" href="{{ home_index }}">Fortran Documentation Home</a>
+          <a class="navbar-brand" href="{{ home_index }}">{{ documentation_title }}</a>
           <a class="navbar-brand" href="{{ class_index }}">Class Index</a>
         </div>
         <div class="collapse navbar-collapse">
