Fixed void function return values Fixed Class Index Used full trees for files and modules Removed unnecessary template headers A little refactoring for HTMLDocMaker

--- a/FortyDocs/lib/templates/_classes.html
+++ b/FortyDocs/lib/templates/_classes.html
@@ -1,4 +1,5 @@
 {# expects the 'classes' variable #}
+{% if classes %}
 <h2>Classes</h2>
 {% for class in classes %}
 {% if loop.first %}
@@ -9,3 +10,4 @@
   </ul>
 {% endif %}
 {% endfor %}
+{% endif %}
