--- a/FortyDocs/lib/templates/_dependencies.html
+++ b/FortyDocs/lib/templates/_dependencies.html
@@ -1,4 +1,5 @@
 {# expects 'dependencies' variable #}
+{% if dependencies %}
 <h2>Dependencies</h2>
   {% for dependency in dependencies %}
   {% if loop.first %}
@@ -18,3 +19,4 @@
     </ul>
   {% endif %}
   {% endfor %}
+{% endif %}
