--- a/FortyDocs/lib/templates/_interfaces.html
+++ b/FortyDocs/lib/templates/_interfaces.html
@@ -1,4 +1,5 @@
 {# expects the 'interfaces' variable #}
+{% if interfaces %}
 <h2>Interfaces <small><a id="icollapser" data-toggle="collapse" data-target="interfaces" href="">Expand Interfaces</a></small></h2>
 <ul class="interfaces">
 {% for interface in interfaces %}
@@ -14,3 +15,4 @@
   {% endfor %}
 {% endfor %}
 </ul>
+{% endif %}
