--- a/FortyDocs/lib/templates/_subroutines.html
+++ b/FortyDocs/lib/templates/_subroutines.html
@@ -1,4 +1,5 @@
 {# expects 'subroutines' variable #}
+{% if subroutines %}
 <h2>Subroutines <small><a id="scollapser" data-toggle="collapse" data-target="arguments" href="">Expand Arguments</a></small></h2>
   {% for subroutine in subroutines %}
   {% if loop.first %}
@@ -14,3 +15,4 @@
   </ul>
   {% endif %}
   {% endfor %}
+{% endif %}
