--- a/FortyDocs/lib/templates/base.html
+++ b/FortyDocs/lib/templates/base.html
@@ -31,7 +31,7 @@
           </button>
           {# each sub-template must provide home_index, class_index #}
           <a class="navbar-brand" href="{{ home_index }}">{{ documentation_title }}</a>
-          <a class="navbar-brand" href="{{ class_index }}">Class Index</a>
+          <a class="navbar-brand" href="{{ class_index }}">Tree Views</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
