--- a/FortyDocs/lib/templates/class_index.html
+++ b/FortyDocs/lib/templates/class_index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block subtitle %}Class Index{% endblock %}
+{% block subtitle %}Tree Views{% endblock %}
 {% block more_links %}
 <li><a href="{{ index_doc }}">Back To Index</a></li>
 {% endblock %}
