--- a/FortyDocs/lib/templates/index.html
+++ b/FortyDocs/lib/templates/index.html
@@ -2,7 +2,7 @@
 {% block subtitle %}Index{% endblock %}
 {% block more_links %}<li><a href="{{ class_index }}"></a></li>{% endblock %}
 {% block lead_content %}
-<h1>Fortran Documentation Index</h1>
+<h1>{{ documentation_title }} Index</h1>
 {% endblock %}
 {% block content %}
 <div class="row">
