--- a/FortyDocs/lib/templates/class.html
+++ b/FortyDocs/lib/templates/class.html
@@ -26,11 +26,19 @@ trees
 {% endblock %}
 {% block content %}
 <div class="row">
-	<div class="col-md-6">
+  <div class="col-md-4">
+    {% include "_generics.html" %}
+  </div>
+</div>
+<div class="row">
+	<div class="col-md-4">
 	  {% include "_subroutines.html" %}
 	</div>
-	<div class="col-md-6">
+	<div class="col-md-4">
 	  {% include "_functions.html" %}
+	</div>
+	<div class="col-md-4">
+	 {% include "_properties.html" %}
 	</div>
 </div>
 <div class="row">
