--- a/FortyDocs/lib/templates/_arguments.html
+++ b/FortyDocs/lib/templates/_arguments.html
@@ -1,21 +1,23 @@
 {# requires 'subroutine' variable. represents arguments for a single subroutine#}
-<ul class="list-unstyled arguments collapse">
 {% for argument in subroutine.arguments %}
+{% if loop.first %}
+<ul class="list-unstyled arguments collapse">
+{% endif %}
   {% if argument.is_return %}
     <li class="return"> 
     {% if argument.class_doc %}
       <a href="{{ argument.class_doc }}"><b>{{ argument.class_caption }}&nbsp;{{ argument.extras|default('', true) }}</b></a>
-      &nbsp;:: {{ argument.caption }}
+      &nbsp;:: {{ argument.full_caption }}
     {% else %}
-      {{ argument.caption }}&nbsp;{{ argument.extras|default('', true) }} :: {{ argument.class_caption|e }}
+      {{ argument.class_caption|e }}&nbsp;&nbsp;{{ argument.extras|default('', true) }} :: {{ argument.full_caption }}
     {% endif %}
   {% else %}
     <li>
     {% if argument.class_doc %}
       <a href="{{ argument.class_doc }}"><b>{{ argument.class_caption }}&nbsp;</b></a>{{ argument.extras|default('', true) }} 
-      &nbsp;:: {{ argument.caption }}
+      &nbsp;:: {{ argument.full_caption }}
     {% else %}
-      {{ argument.caption }}&nbsp;{{ argument.extras|default('', true) }} :: {{ argument.class_caption|e }}
+      {{ argument.class_caption|e }}&nbsp;{{ argument.extras|default('', true) }} :: {{ argument.full_caption }}
     {% endif %}
   {% endif %}
   <em>{{ argument.comment|default('', true) }}</em></li>
