Fixed some function return types Fixed some arrays not properly detected Some refactoring Removed original class styles where they are not relevant

--- a/FortyDocs/lib/templates/class.html
+++ b/FortyDocs/lib/templates/class.html
@@ -10,6 +10,14 @@ subroutines
 functions
 trees
 #}
+{% block head %}
+<style>
+div.orgChart div.node.original{
+  background-color: #ffffff;
+  color: #c0c0c0; 
+}
+</style>
+{% endblock %}
 {% block subtitle %}
 {{ class_name }}:CLS
 {% endblock %}
