--- a/FortyDocs/lib/templates/_subroutines.html
+++ b/FortyDocs/lib/templates/_subroutines.html
@@ -7,7 +7,7 @@
   {% endif %}
     <li><b>{{ subroutine.caption }}</b>
     {% if subroutine.comment|trim %}
-      <p><blockquote>{{ subroutine.comment }}</blockquote></p>
+      <p><blockquote>{{ subroutine.comment|e }}</blockquote></p>
     {% endif %}
     {% include "_arguments.html" %}
     </li>
