--- a/FortyDocs/lib/templates/program.html
+++ b/FortyDocs/lib/templates/program.html
@@ -3,7 +3,7 @@
 {% block lead_content %}
 <h1>{{ program_caption }} <span class="label label-danger">Program</span></h1>
 {% if program_comment|trim %}
-<blockquote><p><pre>{{ program_comment|trim }}</pre></p></blockquote>
+<blockquote><p><pre>{{ program_comment|trim|e }}</pre></p></blockquote>
 {% endif %}
 {% endblock %}
 {% block content %}
