Fixed _arguments.html template bug

--- a/FortyDocs/lib/templates/_arguments.html
+++ b/FortyDocs/lib/templates/_arguments.html
@@ -1,8 +1,7 @@
 {# requires 'subroutine' variable. represents arguments for a single subroutine#}
-{% for argument in subroutine.arguments %}
-{% if loop.first %}
+{% if subroutine.arguments %}
 <ul class="list-unstyled arguments collapse">
-{% endif %}
+{% for argument in subroutine.arguments %}
   {% if argument.is_return %}
     <li class="return"> 
     {% if argument.class_doc %}
@@ -23,3 +22,4 @@
   <em>{{ argument.comment|default('', true)|e }}</em></li>
 {% endfor %}
 </ul>
+{% endif %}
